fix(OpenCloseBox.jsx) smooth animations if no overflow

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -100,25 +100,16 @@
 	on closing - hide overflow outside set width
 */
 .content-container { 
-	transition: height 1s, min-height 1s, width 1s;
+	transition: height 1s, min-height 5s, width 1s;
 
 	background: pink;   
-  padding: 0.5em;
-	white-space: nowrap; 
 	box-sizing: border-box;
-/*	display: flex;
-  flex-direction: row;*/
 
   position: relative;
   float: left;
 
-      min-width: 100%;
-    min-height: 100%;
-
-  /*flex-grow: 1; */
-
- /* min-width: 100%;*/
- /* min-height: 100%;*/
+  min-width: 100%;
+  min-height: 100%; 
 }  
 
 .content-container-closing-overflow {
@@ -136,26 +127,25 @@
   overflow: hidden;
   max-width: 100%;
   min-height: 0; 
-  padding-bottom: 0; 
 }
 
 .content-container-opening-x {
 	height: 0 !important; 
 	min-height: 0;
 	overflow: hidden;
-	padding-bottom: 0;
 }
 
 .content-container-opening-x-max-width {
 	height: 0 !important; 
 	min-height: 0;
 	overflow: hidden;
-	padding-bottom: 0;
 	max-width: 100%;
 }
 
 .content-container-opening-y {
-	overflow: hidden;
+	overflow: hidden; 
+	height: 0;
+	min-height: 100%;
 }
 
 .content-container-open {
